--- a/css/styles.css
+++ b/css/styles.css
@@ -156,6 +156,14 @@ button {
 
 .hero-section {
     background-color: var(--c-background-dark);
+    background-image: linear-gradient(to bottom, 
+    rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)),
+    url('../images/bckgrimg-people-office.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
     padding: 188px 0;
 }
 
