--- a/css/styles.css
+++ b/css/styles.css
@@ -156,9 +156,8 @@ button {
 
 .hero-section {
     background-color: var(--c-background-dark);
-    background-image: linear-gradient(to bottom, 
-    rgba(46, 47, 66, 0.7),
-    rgba(46, 47, 66, 0.7)),
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
     url('../images/bckgrimg-people-office.jpg');
     background-repeat: no-repeat;
     background-position: center;
@@ -209,6 +208,23 @@ button:focus {
 .features-section-list {
     display: flex;
     gap: 24px;
+}
+.box-icon {
+    border: 1px solid #8E8F99;
+    background-color: #F4F4FD;
+    border-radius: 4px;
+    width: 264px;
+    height: 112px;
+    margin-bottom: 8px;
+    position: relative;
+    padding: 24px 100px;
+}
+
+.icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .features-section-list-item {
