--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
     --c-background-white: #FFF;
     --c-cornflower: #E7E9FC;
     --c-additional-border: #8E8F99;
+    --c-footer-accent: #31D0AA;
 }
 
 /*Base*/
@@ -41,6 +42,8 @@ h1,h2,h3,h4, h5, h6, p {
 
 img {
     display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 .container {
@@ -316,23 +319,22 @@ button:focus {
     align-items: center;
 }
 
-.team-section-container-icon {
+.team-section-socials-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    fill: var(--c-primary-light);
     border: 1px solid var(--c-brand);
     border-radius: 50%;
     background-color: var(--c-brand);
     width: 40px;
     height: 40px;
     padding: 12px 12px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-section-icon {
-    fill: var(--c-primary-light);
-}
-
-.team-section-socials-link {
-display: flex;
-justify-content: center;
-align-items: center;
+.team-section-socials-link:hover, .team-section-socials-link:focus {
+    background-color: var(--c-brand-pressed);
 }
 
 /*Our Portfolio Section*/
@@ -387,11 +389,45 @@ align-items: center;
     letter-spacing: 0.02em;
 }
 
+.portfolio-image {
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-overlay {
+    background-color: var(--c-brand);
+    color: var(--c-background-light);
+    position: absolute;
+    inset: 0;
+    padding: 40px 32px 164px;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-section-list-item:hover .portfolio-overlay {
+    transform: translateY(0%);
+}
+
+.overlay-description {
+    color: var(--c-background-light);
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
 /*Footer*/
 
 .footer {
     background-color: var(--c-background-dark);
     padding: 100px 0;
+}
+
+.footer-inner {
+    display: flex;
+}
+
+.footer-logo-text {
+    margin-right: 120px;
 }
 
 .logo-footer {
@@ -416,4 +452,45 @@ align-items: center;
     line-height: 1.5em;
     letter-spacing: 0.02em;
     max-width: 264px;
+}
+
+.footer-social-media {
+    color: var(--c-background-white);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+}
+
+.footer-section-socials-menu {
+    display: flex;
+    gap: 16px;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 208px;
+}
+
+.footer-section-socials-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid var(--c-brand);
+    border-radius: 50%;
+    background-color: var(--c-brand);
+    width: 40px;
+    height: 40px;
+    padding: 8px 8px;
+    fill: var(--c-primary-light);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-section-socials-link:hover {
+    background-color: var(--c-footer-accent);
+}
+
+/*Modal*/
+
+.backdrop {
+    background-color: ;
 }
