--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,9 @@ img {
 
 .header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-container {
@@ -106,12 +109,25 @@ img {
     letter-spacing: 0.02em;
     cursor: pointer;
     align-items: center;
+    position: relative;
+    color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-menu-item:hover,
 .nav-menu-item:focus {
     color: var(--c-brand-pressed);
     text-decoration: underline;
+}
+
+.nav-menu-item::after {
+    position: absolute;
+    content: ''
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
 }
 
 .contacts {
@@ -129,6 +145,10 @@ img {
     gap: 40px;
     flex-grow: 1;
     padding: 24 0;
+}
+
+.contacts-menu-item {
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-menu-item:hover,
@@ -166,7 +186,7 @@ button {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-
+    max-width: 1440px;
     padding: 188px 0;
 }
 
@@ -195,6 +215,7 @@ button {
     border-radius: 4px;
     border-style: none;
     margin: 0 auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-section-button:hover,
