--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ img {
 
 .nav-menu-item::after {
     position: absolute;
-    content: ''
+    content: '';
     left: 0;
     bottom: -1px;
     height: 4px;
@@ -235,6 +235,9 @@ button:focus {
     gap: 24px;
 }
 .features-section-container-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border: 1px solid var(--c-additional-border);
     background-color: var(--c-background-light);
     border-radius: 4px;
@@ -326,36 +329,37 @@ button:focus {
     margin-bottom: 8px;
 }
 
-.team-section-socials {
+.team-section-socials-menu {
     display: flex;
     gap: 24px;
     justify-content: center;
     align-items: center;
 }
 
-.team-section-socials-menu {
-    display: flex;
-    gap: 24px;
-    justify-content: space-between;
-    align-items: center;
+.team-section-socials-item {
+    width: 40px;
+    height: 40px;
 }
 
 .team-section-socials-link {
     display: flex;
     justify-content: center;
     align-items: center;
-    fill: var(--c-primary-light);
     border: 1px solid var(--c-brand);
     border-radius: 50%;
     background-color: var(--c-brand);
-    width: 40px;
-    height: 40px;
+    width: 100%;
+    height: 100%;
     padding: 12px 12px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-section-socials-link:hover, .team-section-socials-link:focus {
     background-color: var(--c-brand-pressed);
+}
+
+.team-section-socials-icon {
+    fill: var(--c-primary-light);
 }
 
 /*Our Portfolio Section*/
