--- a/css/styles.css
+++ b/css/styles.css
@@ -359,7 +359,7 @@ button:focus {
 }
 
 .team-section-socials-icon {
-    fill: var(--c-primary-light);
+    fill: var(--c-background-light);
 }
 
 /*Our Portfolio Section*/
@@ -390,6 +390,12 @@ button:focus {
 .portfolio-section-list-item {
     background-color: var(--c-background-white);
     flex-basis: calc((100% - 48px) / 3);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-section-list-item:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    transform: translateY(0%);
 }
 
 .portfolio-section-list-item-description {
