--- a/css/styles.css
+++ b/css/styles.css
@@ -430,7 +430,6 @@ button:focus {
     color: var(--c-background-light);
     position: absolute;
     inset: 0;
-    padding: 40px 32px 164px;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -444,6 +443,7 @@ button:focus {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding: 40px 32px;
 }
 
 /*Footer*/
@@ -453,8 +453,12 @@ button:focus {
     padding: 100px 0;
 }
 
-.footer-inner {
+.footer-container {
+    max-width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
     display: flex;
+    align-items: baseline;
 }
 
 .footer-logo-text {
@@ -502,6 +506,11 @@ button:focus {
     max-width: 208px;
 }
 
+.footer-section-socials-item {
+    width: 40px;
+    height: 40px;
+}
+
 .footer-section-socials-link {
     display: flex;
     justify-content: center;
@@ -509,15 +518,18 @@ button:focus {
     border: 1px solid var(--c-brand);
     border-radius: 50%;
     background-color: var(--c-brand);
-    width: 40px;
-    height: 40px;
+    width: 100%;
+    height: 100%;
     padding: 8px 8px;
-    fill: var(--c-primary-light);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-section-socials-link:hover {
     background-color: var(--c-footer-accent);
+}
+
+.footer-section-icon {
+fill: var(--c-background-light);
 }
 
 /*Modal*/
