--- a/css/styles.css
+++ b/css/styles.css
@@ -524,7 +524,7 @@ button:focus {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-section-socials-link:hover {
+.footer-section-socials-link:hover, .footer-section-socials-link:focus {
     background-color: var(--c-footer-accent);
 }
 
